# wlibLogger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Logger.cpp  Logger.hpp  main.cpp
